# coronet

./: .gitignore  CMakeLists.txt  README.md
Coronet/: CMakeLists.txt
Coronet/include/Coronet/: Animation.hpp  AssetBitmap.hpp  AssetBitmapSheet.hpp  AssetFile.hpp  AssetStore.hpp  AssetTTFFont.hpp  Bitmap.hpp  BitmapAnimation.hpp  BitmapSheet.hpp  BitmapSheetAnimation.hpp  Camera.hpp  Clock.hpp  Container.hpp  DependencyManager.hpp  Drawable.hpp  Easing.hpp  Font.hpp  Frame.hpp  Game.hpp  GameClock.hpp  GameHost.hpp  Interpolation.hpp  Logging.hpp  Metrics.hpp  Palette.hpp  Renderer.hpp  SheetAnimation.hpp  Sprite.hpp  System.hpp  TTFFont.hpp  TestBrowser.hpp  TestBrowserItem.hpp  TestCase.hpp  TestGame.hpp  Text.hpp  Texture.hpp  Tile.hpp  TiledSprite.hpp  TiledTexture.hpp  Transform.hpp  (+4 more)
Coronet/src/: AssetBitmap.cpp  AssetFile.cpp  AssetStore.cpp  Bitmap.cpp  BitmapAnimation.cpp  BitmapSheet.cpp  BitmapSheetAnimation.cpp  Camera.cpp  Clock.cpp  Container.cpp  Drawable.cpp  Game.cpp  GameClock.cpp  GameHost.cpp  Interpolation.cpp  Logging.cpp  Metrics.cpp  Renderer.cpp  SheetAnimation.cpp  Sprite.cpp  System.cpp  TTFFont.cpp  TestBrowser.cpp  TestBrowserItem.cpp  TestGame.cpp  Text.cpp  Texture.cpp  Tile.cpp  TiledSprite.cpp  TiledTexture.cpp  Transform.cpp  Transformable.cpp  Utilities.cpp  Window.cpp
Tests/: CMakeLists.txt
Tests/include/Tests/: CoronetTestGame.hpp  TestAnimation.hpp  TestCamera.hpp  TestCase.hpp  TestContainer.hpp  TestFlip.hpp  TestKeyInput.hpp  TestSprite.hpp  TestText.hpp  TestTiledSprite.hpp  TestTiledTexture.hpp  TestTransform.hpp  TestTransforms.hpp  TestsGame.hpp
Tests/src/: CoronetTestGame.cpp  Main.cpp  TestAnimation.cpp  TestCamera.cpp  TestContainer.cpp  TestFlip.cpp  TestKeyInput.cpp  TestSprite.cpp  TestText.cpp  TestTiledSprite.cpp  TestTiledTexture.cpp  TestTransform.cpp  TestTransforms.cpp  TestsGame.cpp
cmake/: FindSDL2_ttf.cmake
src/: Game.cpp
